--- a/src/app/features/pago-lotes/components/tabla/tabla.component.html
+++ b/src/app/features/pago-lotes/components/tabla/tabla.component.html
@@ -1,6 +1,8 @@
 <div class="card" *ngIf="ingresosFilter">
-  <p-table [columns]="cols" [value]="ingresosFilter.payload" [(selection)]="ingresosSelected" [scrollable]="true"
-    scrollHeight="400px" [loading]="loading" [tableStyle]="{'min-width': '50rem'}">
+  <h2>Ingresos bancarios</h2>
+  <p-table [columns]="cols" [value]="ingresosFilter.payload" [scrollable]="true" scrollHeight="400px"
+    [loading]="loading" [tableStyle]="{'min-width': '50rem'}"
+    [(selection)]="ingresoSelectedRadio">
     <ng-template pTemplate="header" let-columns>
       <tr>
         <th *ngFor="let col of columns">
@@ -11,24 +13,17 @@
     <ng-template pTemplate="body" let-rowData let-columns="columns">
       <tr>
         <td *ngFor="let col of columns">
-          <span *ngIf="col.pipe === 'currency'">
-            {{ rowData[col.field] | currency:'USD' }}
-          </span>
-
-          <span *ngIf="col.pipe === 'date'">
-            {{ rowData[col.field].toString() | date:'yyyy/MM/dd' }}
-          </span>
-          <span *ngIf="!col.pipe">
-            {{ rowData[col.field] }}
-          </span>
+          <span *ngIf="col.pipe === 'currency'"> {{ rowData[col.field] | currency:'USD' }} </span>
+          <span *ngIf="col.pipe === 'date'"> {{ rowData[col.field].toString() | date:'yyyy/MM/dd' }}</span>
+          <span *ngIf="!col.pipe"> {{ rowData[col.field] }} </span>
 
           <!-- Ingresos -->
           <p-tableRadioButton *ngIf="col.field == 'acciones'" [value]="rowData"
-          (click)="selectIngreso()"
-          />
+            (click)="selectIngreso()" />
 
           <!-- Cuenta corriente -->
-          <!-- <p-tableCheckbox *ngIf="col.field == 'acciones'" [value]="rowData" /> -->
+          <!-- <p-tableCheckbox *ngIf="col.field == 'acciones' && !queryParamsIngresos!.idCuentaBancaria" [value]="rowData"
+            (click)="selectIngreso(rowData)" /> -->
         </td>
       </tr>
     </ng-template>
