--- a/src/app/features/pago-lotes/documentos-cobranza/page/documentos-cobranza-page.component.html
+++ b/src/app/features/pago-lotes/documentos-cobranza/page/documentos-cobranza-page.component.html
@@ -1,39 +1,105 @@
-<div class="grid">
-    <!-- ID cliente -->
-    <div class="col-12 md:col mb-4 mt-4 md:mt-0">
-        <div class="text-center ">
-            <p-floatLabel>
-                <!-- //TODO: checar ancho en responsive -->
-                <p-inputNumber inputId="idCliente" mode="decimal" [min]="0" [useGrouping]="false" class="w-full" />
-                <label for="idCliente">ID Cliente</label>
-            </p-floatLabel>
-        </div>
-    </div>
 
-    <!-- Resultado cliente -->
-    <!-- TODO: desactivar desde formulario reactivo -->
-    <div class="col-12 md:col mb-4">
-        <div class="text-center">
-            <p-floatLabel>
-                <input pInputText id="resultCliente" class="w-full md:w-25rem" />
-                <label for="resultCliente">Cliente</label>
-            </p-floatLabel>
-        </div>
-    </div>
+<h2 class="mb-4">Ingreso bancario: {{ ingresoBancario.saldo | currency:'USD' }}</h2>
+<div class="grid" [formGroup]="formDocumentosCobranza">
 
-    <!-- Boton buscar -->
-    <div class="col-12 md:col mb-4">
-        <div class="text-center ">
-            <!-- <p-button icon="pi pi-search" [rounded]="true" /> -->
-            <pago-lotes-dialog [tableData]="searchTable"></pago-lotes-dialog>
-        </div>
+  <!-- ID cliente -->
+  <div class="col-12 md:col mb-4 mt-4 md:mt-0">
+    <div class="text-center ">
+      <p-floatLabel>
+        <!-- //TODO: checar ancho en responsive -->
+        <p-inputNumber inputId="idCliente" mode="decimal" formControlName="idCliente" (onInput)="filterById($event)"
+          [min]="0" [useGrouping]="false" class="w-full" />
+        <label for="idCliente">ID Cliente</label>
+      </p-floatLabel>
     </div>
+  </div>
 
-    <!-- Obtener facturas -->
-    <div class="col-12 md:col">
-        <div class="text-center">
-            <pago-lotes-dialog [tableData]="facturas"></pago-lotes-dialog>
-            <!-- <p-button label="Facturas" /> -->
-        </div>
+  <!-- Resultado cliente -->
+  <!-- TODO: desactivar desde formulario reactivo -->
+  <div class="col-12 md:col mb-4">
+    <div class="text-center">
+      <p-floatLabel>
+        <input pInputText id="nombre" class="w-full md:w-25rem" formControlName="nombre" />
+        <label for="resultCliente">Cliente</label>
+      </p-floatLabel>
     </div>
+  </div>
+
+  <!-- Boton buscar -->
+  <div class="col-12 md:col mb-4">
+    <div class="text-center ">
+      <!-- <p-button icon="pi pi-search" [rounded]="true" /> -->
+      <pago-lotes-dialog [dataDialog]="clienteTable" (eventCliente)="eventClienteSelected($event)"></pago-lotes-dialog>
+    </div>
+  </div>
+
+  <!-- Obtener facturas -->
+  <div class="col-12 md:col">
+    <div class="text-center">
+      <pago-lotes-dialog [dataDialog]="facturasTable" [idCliente]="idCliente"
+        (facturasEvent)="facturasShowTable($event)"></pago-lotes-dialog>
+      <!-- <p-button label="Facturas" /> -->
+    </div>
+  </div>
+</div>
+
+<!-- Tabla facturas -->
+<div class="card" *ngIf="facturas.length > 0">
+  <p-table [value]="facturas" [columns]="columns" [tableStyle]="{ 'min-width': '50rem' }" editMode="cell">
+
+    <!-- Header -->
+    <ng-template pTemplate="header">
+      <tr>
+        <th *ngFor="let col of columns">
+          {{ col.header }}
+        </th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowData let-columns="columns">
+      <tr>
+        <td *ngFor="let col of columns" [pEditableColumn]="rowData[col.field]" [pEditableColumnField]="col.field">
+
+          <!-- Solo saldo editable -->
+          <ng-container *ngIf="col.field === 'saldo'; else normalColumn">
+            <p-cellEditor>
+              <!-- Input en edición -->
+              <ng-template pTemplate="input">
+                <input pInputText type="number" step="0.01" [(ngModel)]="rowData[col.field]" (change)="updateSaldo()" />
+              </ng-template>
+
+              <!-- Input lectura -->
+              <ng-template pTemplate="output">
+                {{ rowData[col.field] | currency:'USD' }}
+              </ng-template>
+            </p-cellEditor>
+          </ng-container>
+
+          <!-- Todas las demás columnas -->
+          <ng-template #normalColumn>
+            <span *ngIf="col.pipe === 'currency'"> {{ rowData[col.field] | currency:'USD' }} </span>
+            <span *ngIf="!col.pipe && col.field !== 'accion'"> {{ rowData[col.field] }} </span>
+
+            <!-- Columna acción -->
+            <span *ngIf="col.field === 'accion'">
+              <button pButton type="button" icon="pi pi-trash" (click)="deleteFactura(rowData)"
+                class="p-button-text p-button-danger">
+              </button>
+            </span>
+          </ng-template>
+        </td>
+      </tr>
+    </ng-template>
+
+    <!-- Footer -->
+    <ng-template pTemplate="footer">
+      <tr>
+        <td colspan="4" class="text-right">Total de Aplicaciones</td>
+        <td>{{ total | currency:'USD' }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
+
+      <div class="flex justify-content-end gap-2 mt-3">
+        <p-button severity="success" label="Aplicar" (onClick)="aplicarPagos()"/>
+      </div>
 </div>
