--- a/src/app/features/pago-lotes/stepper-one/buscar-cliente-proveedor/pages/buscar-cliente-proveedor-page.component.html
+++ b/src/app/features/pago-lotes/stepper-one/buscar-cliente-proveedor/pages/buscar-cliente-proveedor-page.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formCliente">
+<form [formGroup]="formCliente" autocomplete="false">
 
   <div class="formgrid grid mb-3" [ngClass]="isMobile ? 'p-fluid' : ''">
     <!-- Select Cliente/Proveedor -->
