--- a/src/app/features/pago-lotes/stepper-two/components/dialog/dialog.component.html
+++ b/src/app/features/pago-lotes/stepper-two/components/dialog/dialog.component.html
@@ -53,7 +53,7 @@
 
     <div class="flex justify-content-end gap-2 mt-3" *ngIf="!dataDialog.isCliente">
       <p-button severity="success" label="Aplicar" (onClick)="facturasApply()"
-        [disabled]="this.facturasSelected.length === 0 || !isValidFacturas" />
+        [disabled]="this.facturasSelected.payload.length === 0 || !isValidFacturas" />
       <p-button severity="danger" label="Cancelar" (onClick)="cancelar()" />
     </div>
 
