Mostrar paso 3: Estatus lote

--- a/src/app/features/pago-lotes/components/stepper/stepper.component.html
+++ b/src/app/features/pago-lotes/components/stepper/stepper.component.html
@@ -1,21 +1,27 @@
 <pago-lotes-header></pago-lotes-header>
 
 <div class="card justify-content-center mt-4">
-  <p-accordion [activeIndex]="activeIndex">
+  <p-accordion [(activeIndex)]="activeIndex">
     <!-- Paso 1: -->
     <p-accordionTab header="Paso 1: Buscar Proveedor o Cliente">
 
       <pago-lotes-buscar-cliente-proveedor (isValidSearch)="onValidSearchIngresos($event)"
-      (queryParmasIngresos)="eventQueryParamsIngresos($event)"></pago-lotes-buscar-cliente-proveedor>
+        (queryParmasIngresos)="eventQueryParamsIngresos($event)"></pago-lotes-buscar-cliente-proveedor>
 
       <pago-lotes-tabla *ngIf="isValidFilterIngresos" [queryParamsIngresos]="queryParamsIngresos!"
-      (eventSelectIngreso)="eventIsValidSelectedIngreso($event)"></pago-lotes-tabla>
+        (eventSelectIngreso)="eventIsValidSelectedIngreso($event)"></pago-lotes-tabla>
 
     </p-accordionTab>
 
     <!-- Paso 2: -->
-    <p-accordionTab header="Paso 2: Documentos Cobranza" [disabled]="!isValidSelectedIngreso">
+    <p-accordionTab header="Paso 2: Documentos Cobranza"
+      [disabled]="!isValidSelectedIngreso">
       <pago-lotes-documentos-cobranza-page></pago-lotes-documentos-cobranza-page>
+    </p-accordionTab>
+
+<!-- Paso 3: consultar estatus de lotes -->
+    <p-accordionTab header="Paso 3: Consultar estatus pagos aplicados">
+      <pago-lotees-batch-status [batchId]="batchId"></pago-lotees-batch-status>
     </p-accordionTab>
   </p-accordion>
 </div>
