Solucion de bugs en facturas por idCliente y resetar informacion al aplicar pagos

--- a/src/app/features/pago-lotes/components/stepper/stepper.component.html
+++ b/src/app/features/pago-lotes/components/stepper/stepper.component.html
@@ -1,5 +1,5 @@
 <pago-lotes-header></pago-lotes-header>
-
+<pago-lotes-loading></pago-lotes-loading>
 <div class="card justify-content-center mt-4">
   <p-accordion [(activeIndex)]="activeIndex">
     <!-- Paso 1: -->
